--- a/Styles.css
+++ b/Styles.css
@@ -1,9 +1,12 @@
 .Carrusel img {
-width: 1500px;
-max-width: 900px;
-height: auto;
+    width: 1500px;
+    max-width: 900px;
+    height: auto;
 }
-.menu{
+.menu {
     list-style: none;
-    
+
+}
+.error {
+    color: red;
 }
