Estilo del formulario

--- a/Styles.css
+++ b/Styles.css
@@ -301,3 +301,82 @@ body{
 .menu-footer a:hover {
     text-decoration: underline;
 }
+
+/*Pagina Play*/
+.Play {
+    background-image: url('/Imagenes/Fondo\ azul.jpg'); 
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+/*Formulario de Contacto body */
+.Fcontacto {
+    font-family: Arial, sans-serif;
+    color: grey;
+    display: flex;
+    justify-content: center;
+    height: 100vh;
+    margin: 0;
+}
+
+/*estilo del formulario */
+#contacto {
+    padding: 20px 30px;
+    width: 100%;
+    max-width: 400px;
+    border-radius: 8px;
+    
+}
+
+/* Etiquetas y campos */
+#contacto label {
+    font-weight: bold;
+    margin-bottom: 5px;
+    display: inline-block;
+    color: white;
+}
+
+#contacto input[type="text"],
+#contacto input[type="email"],
+#contacto input[type="tel"],
+#contacto textarea {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 10px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    font-size: 1em;
+}
+/* Boton enviar */
+#contacto button {
+    background-color: blue;
+    color: white;
+    padding: 10px;
+    width: 100%;
+    border: none;
+    border-radius: 4px;
+    font-size: 1em;
+    cursor: pointer;
+    
+}
+
+#contacto button:hover {
+    background-color: #0056b3;
+}
+/* Donde salen los datos enviados */
+#RegistroValido {
+    margin-top: 20px;
+    text-align: left;
+}
+
+.datos-enviados {
+    padding: 10px;
+    border-top: 1px solid #f7eaf1;
+    background-color: #77175f;
+    border-radius: 5px;
+    margin-top: 20px;
+}
+
+.datos-enviados p {
+    margin: 5px 0;
+    color:black;
+}
