--- a/Styles.css
+++ b/Styles.css
@@ -2,11 +2,6 @@
     --primary-color:#084fd3;
     --secondary-color:#f1e1cc;
 }
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
 
 .error {
     color: red;
@@ -14,12 +9,16 @@
 html{
     font-family: Arial, sans-serif;
 }
+
 body{
     background-image: url(./Imagenes/fondo.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 /* header/nav */
 .navbar {
@@ -318,6 +317,22 @@ body{
     margin: 0;
 }
 
+/* CONTACTO */
+body.contacto{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+.contenedor-form{
+    width: 500px;
+    padding: 30px;
+    margin: auto;
+    background-color: var(--secondary-color);
+    margin-top: 30px;
+    margin-bottom: 30px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
+}
 /*estilo del formulario */
 #contacto {
     padding: 20px 30px;
@@ -332,7 +347,7 @@ body{
     font-weight: bold;
     margin-bottom: 5px;
     display: inline-block;
-    color: white;
+    color: black;
 }
 
 #contacto input[type="text"],
@@ -343,7 +358,7 @@ body{
     padding: 8px;
     margin-bottom: 10px;
     border: 1px solid #ddd;
-    border-radius: 4px;
+    border-radius: 8px;
     font-size: 1em;
 }
 /* Boton enviar */
@@ -371,7 +386,7 @@ body{
 .datos-enviados {
     padding: 10px;
     border-top: 1px solid #f7eaf1;
-    background-color: #77175f;
+    background-color: #b1238d;
     border-radius: 5px;
     margin-top: 20px;
 }
